# malomatia-competition-package

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  README.md  TRUE_VERSION_MIGRATION.md  acceptance-checks.md  build-sprint-checklist.md  competition-announcement.md  docker-compose.yml  domain_knowledge.json  example_data.json  gov_triage_dashboard.py  knowledge_manifest.json  kpi.py  rag_engine.py  rag_eval_set.json  requirements-ui.txt  requirements.txt  run_api.sh  run_prototype.sh  run_validation.sh  run_webapp.sh  schema.sql  session3-deliverable.md  setup_demo.sh  storage.py  student-concept-brief.md  theme.css  validation_smoke.py  workflow.py
.github/workflows/: ci-smoke.yml
.streamlit/: config.toml  secrets.example.toml
api/: .env.example  README.md  alembic.ini  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 0001_core_ops_mvp.py
api/app/: __init__.py  audit.py  config.py  db.py  main.py  models.py  rate_limit.py  schemas.py  security.py  seed.py  service.py  workflow_rules.py
api/app/routers/: __init__.py  audit.py  auth.py  cases.py  dashboard.py  health.py  notifications.py  rag.py  review.py  users.py
api/tests/: conftest.py  test_api.py
docs/: pilot-evidence.md
docs/screenshots/: README.md
tests/: test_migrations.py  test_rag_engine.py  test_storage.py  test_ui_contract.py  test_workflow.py
webapp/: README.md  package-lock.json  package.json
webapp/app/: globals.css  layout.tsx  page.tsx
webapp/components/: auth-provider.tsx  case-table.tsx  i18n-provider.tsx  require-auth.tsx  sidebar.tsx  topbar.tsx
(+14 files in other folders)
